--- a/games/connect4.html
+++ b/games/connect4.html
@@ -3,6 +3,22 @@
 <head>
 	<title>Connect 4</title>
 	<style>
+		body {
+			background-color: lightblue;
+			text-align: center;
+		}
+		h1 {
+			font-size: 3em;
+			font-family: Arial, sans-serif;
+			color: darkblue;
+			margin: 0;
+		}
+		h2 {
+			font-size: 1.2em;
+			font-family: Arial, sans-serif;
+			color: darkblue;
+			margin: 0;
+		}
 		.board {
 			display: grid;
 			grid-template-columns: repeat(7, 1fr);
@@ -29,161 +45,197 @@
 			position: absolute;
 			top: 10px;
 			left: 10px;
+			font-size: 1.2em;
+			font-family: Arial, sans-serif;
+			padding: 5px 10px;
+			border: 2px solid darkblue;
+			border-radius: 5px;
+			background-color: white;
 			text-decoration: none;
-			color: black;
-			font-weight: bold;
+			color: darkblue;
+		}
+		.home-button:hover {
+			background-color: darkblue;
+			color: white;
 		}
 	</style>
 </head>
 <body>
 	<a href="../index.html" class="home-button">Home</a>
 	<h1>Connect 4</h1>
+	<h2>Current player: red</h2>
 	<div class="board">
 		<!-- Grid cells will be added here with JavaScript -->
 	</div>
 	<script>
 		const board = document.querySelector('.board');
-	// Create empty grid cells
-	for (let i = 0; i < 42; i++) {
-		const div = document.createElement('div');
-		board.appendChild(div);
-	}
 
-	// Keep track of turn and winner
-	let turn = 'red';
-	let winner = null;
-
-	// Add event listener to each grid cell
-	const cells = document.querySelectorAll('.board div');
-	for (let i = 0; i < cells.length; i++) {
-		cells[i].addEventListener('click', addDisc);
-	}
-
-	// Function to add disc to grid and switch turns
-	function addDisc(event) {
-		const column = event.target.cellIndex;
-		const row = getAvailableRow(column);
-		if (row === null) return; // column is full
-		const disc = document.createElement('div');
-		disc.classList.add(turn);
-		event.target.appendChild(disc);
-		switchTurn();
-		checkForWin(column, row);
-	}
-
-	// Function to find the next available row in a given column
-	function getAvailableRow(column) {
-		const cellsInColumn = document.querySelectorAll(`.board div:nth-child(${column + 1})`);
-		for (let i = cellsInColumn.length - 1; i >= 0; i--) {
-			if (!cellsInColumn[i].hasChildNodes()) return i;
-		}
-		return null;
-    }
-	// Function to switch turns and update current player display
-	function switchTurn() {
-		if (turn === 'red') {
-			turn = 'yellow';
-		} else {
-			turn = 'red';
-		}
-		document.querySelector('h2').textContent = `Current player: ${turn}`;
-	}
-
-	// Function to check for a win
-	function checkForWin(column, row) {
-		// Check for horizontal win
-		const horizontalCells = document.querySelectorAll(`.board div:nth-child(${column + 1})`);
-		let horizontalDiscs = 0;
-		for (let i = 0; i < horizontalCells.length; i++) {
-			if (horizontalCells[i].firstChild && horizontalCells[i].firstChild.classList.contains(turn)) {
-				horizontalDiscs++;
-				if (horizontalDiscs === 4) {
-					winner = turn;
-					endGame();
-					return;
-				}
-			} else {
-				horizontalDiscs = 0;
-			}
+		// Create empty grid cells
+		for (let i = 0; i < 42; i++) {
+		  const div = document.createElement('div');
+		  board.appendChild(div);
 		}
 
-		// Check for vertical win
-		let verticalDiscs = 0;
-		for (let i = row; i >= 0; i--) {
-			const verticalCell = document.querySelector(`.board div:nth-child(${column + 1})`);
-			if (verticalCell.firstChild && verticalCell.firstChild.classList.contains(turn)) {
-				verticalDiscs++;
-				if (verticalDiscs === 4) {
-					winner = turn;
-					endGame();
-					return;
-				}
-			} else {
-				break;
-			}
-			column++;
-		}
+		let currentPlayer = 'red';
 
-		// Check for diagonal win (top left to bottom right)
-		let diagonal1Discs = 0;
-		let currentColumn = column;
-		let currentRow = row;
-		while (currentColumn > 0 && currentRow > 0) {
-			currentColumn--;
-			currentRow--;
-		}
-		while (currentColumn < 7 && currentRow < 6) {
-			const diagonal1Cell = document.querySelector(`.board div:nth-child(${currentColumn + 1})`);
-			if (diagonal1Cell.firstChild && diagonal1Cell.firstChild.classList.contains(turn)) {
-				diagonal1Discs++;
-				if (diagonal1Discs === 4) {
-					winner = turn;
-					endGame();
-					return;
-				}
-			} else {
-				diagonal1Discs = 0;
-			}
-			currentColumn++;
-			currentRow++;
-		}
-
-		// Check for diagonal win (top right to bottom left)
-		let diagonal2Discs = 0;
-		currentColumn = column;
-		currentRow = row;
-		while (currentColumn < 6 && currentRow > 0) {
-			currentColumn++;
-			currentRow--;
-		}
-		while (currentColumn >= 0 && currentRow < 6) {
-			const diagonal2Cell = document.querySelector(`.board div:nth-child(${currentColumn + 1})`);
-			if (diagonal2Cell.firstChild && diagonal2Cell.firstChild.classList.contains(turn)) {
-				diagonal2Discs++;
-				if (diagonal2Discs === 4) {
-					winner = turn;
-					endGame();
-					return;
-				}
-			} else {
-				diagonal2Discs = 0;
-			}
-			currentColumn--;
-			currentRow++;
-		}
-	}
-
-	// Function to end game and display winner
-	function endGame() {
+		// Add event listeners to grid cells
 		const cells = document.querySelectorAll('.board div');
 		for (let i = 0; i < cells.length; i++) {
-			cells[i].removeEventListener('click', addDisc);
+		  cells[i].addEventListener('click, handleClick);
 		}
-		document.querySelector('h2').textContent = `Winner: ${winner}`;
-	}
+	function handleClick(event) {
+	  const column = event.target.cellIndex;
 
-	// Initialize game with empty grid and current player display
-	document.querySelector('h2').textContent = `Current player: ${turn}`;
-</script>
-</body>
+	  // Find the first empty cell in the selected column
+	  const rows = Array.from(document.querySelectorAll('.board div')).filter(cell => cell.cellIndex === column);
+	  let emptyCell = rows.find(cell => !cell.classList.contains('red') && !cell.classList.contains('yellow'));
+
+	  // If the column is full, do nothing
+	  if (!emptyCell) return;
+
+	  // Fill the cell with the current player's color
+	  emptyCell.classList.add(currentPlayer);
+
+	  // Check if the game is won
+	  const winningConditions = [
+	    // Horizontal
+	    [0, 1, 2, 3],
+	    [1, 2, 3, 4],
+	    [2, 3, 4, 5],
+	    [3, 4, 5, 6],
+	    [7, 8, 9, 10],
+	    [8, 9, 10, 11],
+	    [9, 10, 11, 12],
+	    [10, 11, 12, 13],
+	    [14, 15, 16, 17],
+	    [15, 16, 17, 18],
+	    [16, 17, 18, 19],
+	    [17, 18, 19, 20],
+	    [21, 22, 23, 24],
+	    [22, 23, 24, 25],
+	    [23, 24, 25, 26],
+	    [24, 25, 26, 27],
+	    [28, 29, 30, 31],
+	    [29, 30, 31, 32],
+	    [30, 31, 32, 33],
+	    [31, 32, 33, 34],
+	    [35, 36, 37, 38],
+	    [36, 37, 38, 39],
+	    [37, 38, 39, 40],
+	    [38, 39, 40, 41],
+	    // Vertical
+	    [0, 7, 14, 21],
+	    [7, 14, 21, 28],
+	    [1, 8, 15, 22],
+	    [8, 15, 22, 29],
+	    [2, 9, 16, 23],
+	    [9, 16, 23, 30],
+	    [3, 10, 17, 24],
+	    [10, 17, 24, 31],
+	    [4, 11, 18, 25],
+	    [11, 18, 25, 32],
+	    [5, 12, 19, 26],
+	    [12, 19, 26, 33],
+	    [6, 13, 20, 27],
+	    [13, 20, 27, 34],
+	    // Diagonal
+	    [0, 8, 16, 24],
+	    [1, 9, 17, 25],
+	    [2, 10, 18, 26],
+	    [3, 11, 19, 27],
+	    [7, 15,23, 31],
+	    [8, 16, 24, 32],
+	    [9, 17, 25, 33],
+	    [10, 18, 26, 34],
+	    [14, 22, 30, 38],
+	    [15, 23, 31, 39],
+	    [16, 24, 32, 40],
+	    [17, 25, 33, 41],
+	    [21, 29, 37, 41],
+	    [22, 30, 38, 42],
+	    [23, 31, 39, 43],
+	    [24, 32, 40, 44],
+	    [28, 36, 44, 52],
+	    [29, 37, 45, 53],
+	    [30, 38, 46, 54],
+	    [31, 39, 47, 55],
+	    [35, 43, 51, 59],
+	    [36, 44, 52, 60],
+	    [37, 45, 53, 61],
+	    [38, 46, 54, 62],
+	    [42, 50, 58, 66],
+	    [43, 51, 59, 67],
+            [44, 52, 60, 68],
+	    [45, 53, 61, 69],
+	    [49, 57, 65, 73],
+	    [50, 58, 66, 74],
+	    [51, 59, 67, 75],
+	    [52, 60, 68, 76],
+	    [56, 64, 72, 80],
+	    [57, 65, 73, 81],
+	    [58, 66, 74, 82],
+	    [59, 67, 75, 83],
+	    // Anti-diagonal
+	    [3, 9, 15, 21],
+	    [4, 10, 16, 22],
+	    [5, 11, 17, 23],
+	    [6, 12, 18, 24],
+	    [10, 16, 22, 28],
+	    [11, 17, 23, 29],
+	    [12, 18, 24, 30],
+	    [13, 19, 25, 31],
+	    [17, 23, 29, 35],
+	    [18, 24, 30, 36],
+	    [19, 25, 31, 37],
+	    [20, 26, 32, 38],
+	    [24, 30, 36, 42],
+ 	    [25, 31, 37, 43],
+	    [26, 32, 38, 44],
+	    [27, 33, 39, 45],
+	    [31, 37, 43, 49],
+	    [32, 38, 44, 50],
+	    [33, 39, 45, 51],
+	    [34, 40, 46, 52],
+	    [38, 44, 50, 56],
+	    [39, 45, 51, 57],
+	    [40, 46, 52, 58],
+	    [41, 47, 53, 59],
+	    [45, 51, 57, 63],
+	    [46, 52, 58, 64],
+	    [47, 53, 59, 65],
+	    [48, 54, 60, 66],
+	    [52, 58, 64, 70],
+	    [53, 59, 65, 71],
+	    [54, 60, 66, 72],
+	    [55, 61, 67, 73],
+	    [59, 65, 71, 77],
+	    [60, 66, 72, 78],
+	    [61, 67, 73, 79],
+	    [62, 68, 74, 80]
+	  ];
+	  for (let i = 0; i < winningConditions.length; i++) {
+	    const [a, b, c, d] = winningConditions[i];
+	    if (cells[a].classList.contains(currentPlayer) &&
+	        cells[b].classList.contains(currentPlayer) &&
+	        cells[c].classList.contains(currentPlayer) &&
+	        cells[d].classList.contains(currentPlayer)) {
+	      alert(`Player ${currentPlayer} wins!`);
+	      return;
+	    }
+	  }
+
+	  // Check if the game is a draw
+	  const emptyCells = Array.from(document.querySelectorAll('.board div')).filter(cell => !cell.classList.contains('red') && !cell.classList.contains('yellow'));
+	  if (emptyCells.length === 0) {
+	    alert('The game is a draw!');
+	    return;
+	  }
+
+	  // Switch players
+	  currentPlayer = currentPlayer === 'red' ? 'yellow' : 'red';
+	  document.querySelector('h2').innerHTML = `Current player: ${currentPlayer}`;
+	}
+      </script>
+
+    </body>
 </html>
